--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,10 +48,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.8
-_minor=14
+_minor=15
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.8.14.lqx1.r0.gfaf9e60ceb78
+pkgver=5.8.15.lqx1.r0.g5d80c6330dfb
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
