--- a/linux-zen-rebranded/linux-zen-tag/PKGBUILD
+++ b/linux-zen-rebranded/linux-zen-tag/PKGBUILD
@@ -45,13 +45,11 @@ _use_current=
 pkgbase=linux-zen-tag
 # pkgname=('linux-zen-tag' 'linux-zen-tag-headers' 'linux-zen-tag-docs')
 _major=5.9
-#_minor=0
+_minor=1
 _zen=zen1
 _srcname=linux-${_major}
-#pkgver=${_major}.${_minor}.${_zen}
-#_pkgver=${_major}.${_minor}-${_zen}
-pkgver=${_major}.${_zen}
-_pkgver=${_major}-${_zen}
+pkgver=${_major}.${_minor}.${_zen}
+_pkgver=${_major}.${_minor}-${_zen}
 pkgrel=1
 pkgdesc='Linux ZEN'
 arch=('x86_64')
@@ -307,7 +305,7 @@ done
 
 sha512sums=('d3d92ce4246bad74c9a784212f160d98449b1e8793970c2c308276568d852b8effe0528686bdb87d55d691f09a826abf7938d69bdd4759ce65ddd5c05ffe4eca'
             'SKIP'
-            'c84fa6336edfd0ccaf307a01612e1c37de8aa0089e19ab5ece2d0cacd435c34149e3d8ab12c5b35bb19dcb2e231c7d1b94f71a013d3cb49313255818af00ee13'
+            '988b344a9201b631a96119e7f385b5b9acd7d65855cd2ffc51a8216f172ec8d0ed5ca9569aecd0192a1b33d2a15fee2a9aea8389a07cb89ed4ca1f39f99c2abb'
             'SKIP'
             'b1abc4b21191c841326db341aeea6eac9918a4628f38e32f616a8eeeb9919395656fc4b805110dce93aa38188172fb672831fd76e848b3711fcd6ea9115118c6'
             '8a2e2a48c74252d1e8616038d1bc572a73c540b79e6799fb72c0713ca091cb9866a26813266ff7b1514a4a7d504158d8637252c157b553463a3c5bcef5312be2')
