--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,10 +48,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.8
-_minor=15
+_minor=16
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.8.15.lqx1.r0.g5d80c6330dfb
+pkgver=5.8.16.lqx1.r0.g21b0a2fc5cc1
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
