--- a/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
@@ -56,7 +56,7 @@ _lqx=lqx1
 _srcname=linux-${_major}
 pkgver=${_major}.${_minor}.${_lqx}
 _pkgver=${_major}.${_minor}-${_lqx}
-pkgrel=3
+pkgrel=4
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -119,7 +119,7 @@ prepare() {
         patch -Np1 < "../$src"
         done
 
-    ### Setting config
+   ### Setting config
         echo "Setting config..."
         cp ../config .config
         make olddefconfig
@@ -146,7 +146,13 @@ prepare() {
     ### Disable MUQSS
         if [ -n "$_muqss_disable" ]; then
         echo "Disabling MUQSS..."
-        scripts/config --disable CONFIG_SCHED_MUQSS
+            scripts/config --disable CONFIG_SCHED_MUQSS
+            scripts/config --disable CONFIG_RQ_NONE
+            scripts/config --disable CONFIG_RQ_SMT
+            scripts/config --disable CONFIG_RQ_MC
+            scripts/config --disable CONFIG_RQ_MC_LLC
+            scripts/config --disable CONFIG_RQ_SMP
+            scripts/config --disable CONFIG_RQ_ALL
         fi
 
     ### Optionally disable NUMA for 64-bit kernels only
