--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -55,7 +55,7 @@ _minor=16
 _lqx=lqx1
 _srcname=zen-kernel
 pkgver=5.8.16.lqx1.r0.g21b0a2fc5cc1
-pkgrel=3
+pkgrel=4
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -136,7 +136,13 @@ prepare() {
     ### Disable MUQSS
         if [ -n "$_muqss_disable" ]; then
         echo "Disabling MUQSS..."
-        scripts/config --disable CONFIG_SCHED_MUQSS
+            scripts/config --disable CONFIG_SCHED_MUQSS
+            scripts/config --disable CONFIG_RQ_NONE
+            scripts/config --disable CONFIG_RQ_SMT
+            scripts/config --disable CONFIG_RQ_MC
+            scripts/config --disable CONFIG_RQ_MC_LLC
+            scripts/config --disable CONFIG_RQ_SMP
+            scripts/config --disable CONFIG_RQ_ALL
         fi
 
     ### Optionally disable NUMA for 64-bit kernels only
