--- a/linux-lqx-rebranded/linux-lqx-dev-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-dev-git/PKGBUILD
@@ -57,7 +57,7 @@ _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-dev-git
 pkgver=5.8.5.1.r1703.g884b2e4
-pkgrel=4
+pkgrel=5
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="http://liquorix.net/"
@@ -162,6 +162,7 @@ prepare() {
             scripts/config --disable CONFIG_RQ_MC_LLC
             scripts/config --disable CONFIG_RQ_SMP
             scripts/config --disable CONFIG_RQ_ALL
+            scripts/config --undefine CONFIG_SHARERQ
         fi
 
     ### Optionally disable NUMA for 64-bit kernels only
