--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -57,7 +57,7 @@ _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-git
 pkgver=5.8.16.1.r1756.g2b93c71
-pkgrel=2
+pkgrel=3
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="http://liquorix.net/"
@@ -162,6 +162,7 @@ prepare() {
             scripts/config --disable CONFIG_RQ_MC_LLC
             scripts/config --disable CONFIG_RQ_SMP
             scripts/config --disable CONFIG_RQ_ALL
+            scripts/config --undefine CONFIG_SHARERQ
         fi
 
     ### Optionally disable NUMA for 64-bit kernels only
