--- a/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
@@ -56,7 +56,7 @@ _lqx=lqx1
 _srcname=linux-${_major}
 pkgver=${_major}.${_minor}.${_lqx}
 _pkgver=${_major}.${_minor}-${_lqx}
-pkgrel=4
+pkgrel=5
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -153,6 +153,7 @@ prepare() {
             scripts/config --disable CONFIG_RQ_MC_LLC
             scripts/config --disable CONFIG_RQ_SMP
             scripts/config --disable CONFIG_RQ_ALL
+            scripts/config --undefine CONFIG_SHARERQ
         fi
 
     ### Optionally disable NUMA for 64-bit kernels only
