--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -55,7 +55,7 @@ _minor=16
 _lqx=lqx1
 _srcname=zen-kernel
 pkgver=5.8.16.lqx1.r0.g21b0a2fc5cc1
-pkgrel=4
+pkgrel=5
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -143,6 +143,7 @@ prepare() {
             scripts/config --disable CONFIG_RQ_MC_LLC
             scripts/config --disable CONFIG_RQ_SMP
             scripts/config --disable CONFIG_RQ_ALL
+            scripts/config --undefine CONFIG_SHARERQ
         fi
 
     ### Optionally disable NUMA for 64-bit kernels only
