--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -51,11 +51,11 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.8
-_minor=16
+_minor=17
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.8.16.lqx1.r0.g21b0a2fc5cc1
-pkgrel=5
+pkgver=5.8.17.lqx1.r0.g855705edbfb6
+pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
