--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -52,9 +52,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.8
 _minor=17
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.8.17.lqx1.r0.g855705edbfb6
+pkgver=5.8.17.lqx2.r0.gca31b42343ac
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
