--- a/aur-rebased/linux-zen-git/PKGBUILD
+++ b/aur-rebased/linux-zen-git/PKGBUILD
@@ -46,7 +46,7 @@ pkgbase=linux-zen-git
 # pkgname=('linux-zen-git' 'linux-zen-git-headers' 'linux-zen-git-docs')
 _major=5.9
 _srcname=zen-kernel
-pkgver=5.9.1.r951349.g0573df1b6cbb
+pkgver=5.9.4.r952211.g2e0217ea8309
 pkgrel=1
 pkgdesc='Linux ZEN'
 arch=('x86_64')
@@ -295,4 +295,4 @@ done
 
 sha512sums=('SKIP'
             'b1abc4b21191c841326db341aeea6eac9918a4628f38e32f616a8eeeb9919395656fc4b805110dce93aa38188172fb672831fd76e848b3711fcd6ea9115118c6'
-            '8a2e2a48c74252d1e8616038d1bc572a73c540b79e6799fb72c0713ca091cb9866a26813266ff7b1514a4a7d504158d8637252c157b553463a3c5bcef5312be2')
+            '7fa83b30b5fac48816e2f396155c77561a611f4757c95cc6b34a62f98a88e03f5b8bd915c2dbb6fc60dd7b760f42337e26e8139e7991ac444842f10ce8882e32')
