--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -52,9 +52,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.9
 _minor=8
-_lqx=lqx2
+_lqx=lqx3
 _srcname=zen-kernel
-pkgver=5.9.8.lqx2.r0.gd0056e57d1e9
+pkgver=5.9.8.lqx3.r0.gbc738639b235
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
