--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -51,10 +51,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.9
-_minor=14
+_minor=15
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.9.14.lqx1.r0.gd4e4189aeefb
+pkgver=5.9.15.lqx1.r0.g7c8a33534029
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
