--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -51,10 +51,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.9
-_minor=15
+_minor=16
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.9.15.lqx1.r0.g7c8a33534029
+pkgver=5.9.16.lqx1.r0.gd0b51fee86fe
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
