--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -51,11 +51,11 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.10
-_minor=3
+_minor=4
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.10.3.lqx1.r0.g87c8a1fdd55a
-pkgrel=2
+pkgver=5.10.4.lqx1.r0.gdb12c5335099
+pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
