--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -52,9 +52,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.10
 _minor=4
-_lqx=lqx2
+_lqx=lqx3
 _srcname=zen-kernel
-pkgver=5.10.4.lqx2.r0.gda28642b6208
+pkgver=5.10.4.lqx3.r0.g826f6a463e41
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
