--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -52,9 +52,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.10
 _minor=6
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.10.6.lqx1.r0.gb6aba082c62f
+pkgver=5.10.6.lqx2.r0.g14b702faac90
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
