--- a/linux-5.11rc/kernel-5.11rc/linux-uksm-git/PKGBUILD
+++ b/linux-5.11rc/kernel-5.11rc/linux-uksm-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-uksm-git
 _major=5.11
 _major_rc=5.11-rc
 _srcname=linux
-pkgver=5.11.rc2.r156.g71c061d24438
+pkgver=5.11.rc3.r0.g7c53f6b671f4
 pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
