--- a/linux-5.11rc/kernel-5.11rc/linux-bfq-dev/PKGBUILD
+++ b/linux-5.11rc/kernel-5.11rc/linux-bfq-dev/PKGBUILD
@@ -295,6 +295,7 @@ _package-headers() {
 }
 
 _package-docs() {
+    pkgdesc="Documentation for the $pkgdesc kernel"
     depends=('linux-bfq-dev')
     replaces=('linux-bfq-docs')
     conflicts=('linux-bfq-docs')
