--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -51,10 +51,10 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.10
-_minor=7
-_lqx=lqx2
+_minor=8
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.10.7.lqx2.r0.g0a1f1d265c6a
+pkgver=5.10.8.lqx1.r0.g47e6f55e311a
 pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
